2005-01-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/param/loadparm.c (print_parameter): Remove.
	(is_default): Remove.
	(dump_globals): Remove.
	(dump_a_service): Remove.
	(lp_dump): Remove.
	(lp_dump_one): Remove.
	(lp_remove_service): Remove.
	(lp_copy_service): Remove.

2005-01-20  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* Makefile.am (SAMBA_DIST): Remove lib/genrand.c and lib/util_unistr.c.
	* samba/Makefile.in (SAMBAFILES): Remove lib/genrand.o and
	lib/util_unistr.o.

	* samba/libsmb/clientgen.c (cli_oem_change_password): Removed.
	* samba/libsmb/smbencrypt.c (make_oem_passwd_hash): Removed.
	* samba/lib/util_sock.c (reset_globals_after_fork): Removed.

	* samba/lib/util_file.c: Comment out all but fgets_slash().

	* samba/lib/util.c: Comment out some more unused functions.
	(global_myworkgroup): Remove unused variable.
	(def_finfo): Make const.
	(remote_proto, remote_arch): Make static const char * instead of
	fstring.
	(local_machine, remote_machine): Ditto.
	* samba/libsmb/clientgen.c (interpret_long_filename): Fix 
	def_finfo declaration.

2005-01-19  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ftpfs.c (ftpfs_file_store): Make sure we write() all read() data.
	Check fstat() return value.

2005-01-07  Roland Illig <roland.illig@gmx.de>

	* extfs/urar.in: Fixed some quoting issues.

	Original patch by Leonard den Ottolander.

2004-12-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs.c (struct inode): Remove unused linkflag field.
	(extfs_internal_stat): Eliminate "inode" variable.
	(extfs_fstat): Likewise.
	(extfs_unlink): Fix memory leak if extfs_get_path_mangle() fails.

2004-12-28  Dmitry Butskoj  <buc@odusz.so-cdu.ru>

	* fish.c (fish_linear_abort): Fix bug with FISH vfs. It freezes MC on
	transfer abort.

2004-12-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs.c (extfs_generate_entry): Initialize inode->last_in_subdir.
	(extfs_read_archive): Likewise. Remove unneeded test.
	Fix http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=286990
